# Indie-Studio

./: .gitignore  LICENSE.md  README.md  action.yml  script.sh
Doxygen/: Doxyfile.in
project/: CMakeLists.txt  Makefile  README.md  map.txt  projectBuild.sh
project/Assets/: map.txt
project/Assets/Maps/: map.txt
project/Conf/: object.json  settings.json
project/Conf/Scenes/: parallax.json
project/Conf/Scenes/BindingScene/: button.json  image.json  pop_up_text.json  text.json  tmp
project/Conf/Scenes/CreditsScene/: button.json  image.json
project/Conf/Scenes/EndGameScene/: button.json  image.json  text.json
project/Conf/Scenes/FramerateScene/: button.json  text.json
project/Conf/Scenes/GameScene/: button.json  endingGameText.json  image.json  parameters.json  startingGameText.json  text.json
project/Conf/Scenes/GameScene/icons/: player1.json  player2.json  player3.json  player4.json
project/Conf/Scenes/GameScene/sets/: player3.json
project/Conf/Scenes/HelpScene/: button.json  image.json  text.json
project/Conf/Scenes/InformationScene/: button.json  text.json
project/Conf/Scenes/IntroductionScene/: image.json  text.json
project/Conf/Scenes/MainMenu/: button.json  image.json  object.json  text.json
project/Conf/Scenes/OptionGameMenuScene/: bonus.json  button.json  image.json  player.json  sets.json  text.json  time.json
project/Conf/Scenes/OptionGameMenuScene/Option/: bonus.json  time.json
project/Conf/Scenes/PauseScene/: button.json  text.json
project/Conf/Scenes/SelectGameMenu/: button.json  image.json  text.json
project/Conf/Scenes/SelectMap/: button.json
project/Conf/Scenes/SelectMapScene/: button.json  droppedFile.json  image.json  mapsList.json  noDroppedFile.json
project/Conf/Scenes/SelectPlayerScene/: button.json  image.json  pop.json  text.json
project/Conf/Scenes/SelectPlayerScene/colors/: player1.json  player2.json  player3.json  player4.json
project/Conf/Scenes/SelectPlayerScene/icons/: player1.json  player2.json  player3.json  player4.json
project/Conf/Scenes/SelectSaveScene/: button.json  image.json  text.json
project/Conf/Scenes/SettingsScene/: button.json
project/Conf/Scenes/StartGameScene/: text.json
project/Conf/Scenes/VolumeSettingsScene/: button.json  image.json
project/Conf/Settings/: keys.json  musics.json  settings.json  sounds.json
project/Conf/WaitingScreen/: image.json  text.json
project/Ressources/: explosionAnim.iqm  scene.gltf
project/Ressources/Maps/Basics/: 13x9.map  17x11.map  random.map
project/Save/Games/: gameSave.json
project/Save/Maps/: asmall.map  bmedium.map  random.map
project/Source/: main.cpp
project/Source/Audio/: IAudio.hpp
project/Source/Audio/Music/: Music.cpp  Music.hpp
project/Source/Audio/Sound/: MySound.cpp  MySound.hpp  Sound.cpp  Sound.hpp
project/Source/Core/: Core.cpp  Core.hpp
project/Source/Datas/: IRenderding.hpp  Position.cpp  Position.hpp
project/Source/Datas/Position/: Position.cpp  Position.hpp
project/Source/Datas/Rendering/: Animation.hpp  Model.hpp  Texture.hpp
project/Source/Errors/: Errors.cpp  Errors.hpp
project/Source/Errors/ErrorsModules/: ErrorsSettings.cpp  ErrorsSettings.hpp
project/Source/Errors/ErrorsModules/Audio/: AudioError.hpp
project/Source/Errors/ErrorsModules/File/: FileError.cpp  FileError.hpp
project/Source/Errors/ErrorsModules/Position/: PositionError.cpp  PositionError.hpp
project/Source/Errors/ErrorsModules/Raylib/: WindowError.hpp
project/Source/Errors/ErrorsModules/Window/: WindowError.cpp  WindowError.hpp
project/Source/Errors/Modules/Position/: PositionError.cpp  PositionError.hpp
project/Source/Errors/modules/Raylib/: WindowError.cpp  WindowError.hpp
project/Source/Inputs/Gamepad/: Gamepad.cpp  Gamepad.hpp
project/Source/Inputs/Keyboard/: Keyboard.cpp  Keyboard.hpp
project/Source/Map/: Map.cpp  Map.hpp
project/Source/Objects/: IGameObject.hpp  IObject.hpp
project/Source/Objects/2DObject/: ITwoDimensionObject.hpp
project/Source/Objects/2DObject/Button/: Button.cpp  Button.hpp
project/Source/Objects/2DObject/Image/: Image.cpp  Image.hpp
project/Source/Objects/2DObject/Text/: Text.cpp  Text.hpp
project/Source/Objects/3DObject/: AThreeDimensionObject.cpp  AThreeDimensionObject.hpp  IThreeDimensionObject.hpp
project/Source/Objects/3DObject/AiObject/: Ai.cpp  Ai.hpp
project/Source/Objects/3DObject/BombObject/: Bomb.cpp  Bomb.hpp
project/Source/Objects/3DObject/PlayerObject/: Player.cpp  Player.hpp
project/Source/Objects/MapObject/Block/: Block.cpp  Block.hpp
project/Source/Objects/MapObject/Map/: Map.cpp  Map.hpp
project/Source/Objects/UIObject/: IUIObject.hpp
project/Source/Objects/UIObject/Button/: Button.cpp  Button.hpp
project/Source/Objects/UIObject/Text/: Text.cpp  Text.hpp
project/Source/Raylib/Core/Camera/: Camera.cpp  Camera.hpp
project/Source/Raylib/Core/Window/: Window.cpp  Window.hpp
project/Source/Scenes/: AScene.cpp  AScene.hpp  IScene.hpp
project/Source/Scenes/GameScenes/: EndGameScene.cpp  EndGameScene.hpp  GameScene.cpp  GameScene.hpp  PauseScene.cpp  PauseScene.hpp
project/Source/Scenes/NonGameScenes/: IMenuScene.hpp  SplashScreenScene.cpp  SplashScreenScene.hpp
project/Source/Scenes/NonGameScenes/BindingScene/: BindingScene.cpp  BindingScene.hpp
project/Source/Scenes/NonGameScenes/CreditsScene/: CreditsScene.cpp  CreditsScene.hpp
project/Source/Settings/: Settings.cpp  Settings.hpp  SettingsParams.cpp  SettingsParams.hpp
project/Source/Settings/GameSettings/: GameSettings.cpp  GameSettings.hpp
project/Source/Tools/: clock.hpp  createColor.cpp  getJsonData.cpp  loadObject.cpp  loadObjects.cpp  loadSettings.cpp  readFile.cpp  setActionToString.cpp  setRectangle.cpp  tools.hpp
project/Tests/: Test.cpp
project/Tests/Conf/Settings/: settings.json
project/Tests/Source/Audio/: Test.cpp
project/Tests/Source/Scenes/: Test.cpp
project/Tests/Source/Settings/: Test.cpp
project/Tests/Source/Tools/: Test.cpp
project/Tests/Tools/: Test.cpp
project/cmake/: Findraylib.cmake
project/cmake-modules/: Doxygen.cmake  Findjson.cmake
(+158 files in other folders)
